# blizz_beta

./: .gitignore  LICENSE  README.md  blizz  config.cfg  joblib.py  pyproject.toml  requirements.txt
.history/: custom_memory_20250129210418.py  custom_memory_20250129215637.py  main_20250129214208.py  main_20250129220512.py
ml/: nightly_retrain.sh  predict.py  train.py
ml/data/: intents.csv
prompts/: system.txt
src/: blizz_cli.py  blizz_gui.py  chat_engine.py  executor.py  main.py  simple_main.py  sniper_runner.py
src/config/: config_loader.py  features.json  interface_config.json  neocortex.json
src/guidance/: __init__.py  exploit.py  recon.py  scan.py
src/models/: bot_mission.json  custom_memory.json  custom_memory.py  event_log.json  memory.json  processed_memory.json
src/modules/: __init__.py  behavior_alignment.py  chat_db.py  chat_handler.py  cli_guidance.py  command_executor.py  context.py  dashboard.py  documentation_generator.py  drift_monitor.py  embedding_utils.py  event_logger.py  feedback_loop.py  file_utils.py  guidance_api.py  (+14 more)
tests/: conftest.py  test_blizz_gui_dashboard_refresh.py  test_chat_loop.py  test_chat_session_display.py  test_cli.py  test_command_executor.py  test_contextual_response.py  test_custom_memory.py  test_event_logger.py  test_feedback_loop.py  test_guidance_manager.py  test_intent_model.py  test_introspection.py  test_memory_db.py  test_memory_handler.py  test_memory_processor.py  test_port_scanner.py  test_self_awareness.py  test_self_improvement.py  test_structured_chat.py  test_summarizer_module.py  test_use_emoji.py
